update message history
